compiler-core/src/parse/snapshots/gleam_core__parse__tests__bare_expression.snap
---
source: compiler-core/src/parse/tests.rs
expression: "1"
---
[
    Expression(
        Int {
            location: SrcSpan {
                start: 0,
                end: 1,
            },
            value: "1",
            int_value: 1,
        },
    ),
]
