compiler-core/src/parse/snapshots/gleam_core__parse__tests__block.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 398
expression: "{ 1 2 }"
---
Sequence {
    location: SrcSpan {
        start: 2,
        end: 5,
    },
    expressions: [
        Int {
            location: SrcSpan {
                start: 2,
                end: 3,
            },
            value: "1",
        },
        Int {
            location: SrcSpan {
                start: 4,
                end: 5,
            },
            value: "2",
        },
    ],
}
