compiler-core/src/parse/snapshots/gleam_core__parse__tests__block_of_one.snap
---
source: compiler-core/src/parse/tests.rs
expression: "{ 1 }"
---
[
    Expression(
        Block {
            location: SrcSpan {
                start: 0,
                end: 5,
            },
            statements: [
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 2,
                            end: 3,
                        },
                        value: "1",
                        int_value: 1,
                    },
                ),
            ],
        },
    ),
]
