compiler-core/src/parse/snapshots/gleam_core__parse__tests__byte_order_mark.snap
---
source: compiler-core/src/parse/tests.rs
expression: ﻿todo
---
[
    Expression(
        Todo {
            kind: Keyword,
            location: SrcSpan {
                start: 3,
                end: 7,
            },
            message: None,
        },
    ),
]
